--- a/waitlist/src/Component/admin/admin.component.html
+++ b/waitlist/src/Component/admin/admin.component.html
@@ -90,7 +90,7 @@
       <div class="modal-content">
         <div class="modal-header">
           <h4 class="modal-title">Edit</h4>
-          <button type="button" class="close" data-dismiss="modal">&times;</button>
+          <button type="button" class="close" data-dismiss="modal" (click)="edited=false">&times;</button>
         </div>
         <div class="modal-body">
           <div *ngIf="!edited">
