--- a/waitlist/src/Component/admin/admin.component.html
+++ b/waitlist/src/Component/admin/admin.component.html
@@ -120,7 +120,7 @@
       <div class="modal-content">
         <div class="modal-header">
           <h4 class="modal-title">Delete User</h4>
-          <button type="button" class="close" data-dismiss="modal">&times;</button>
+          <button type="button" class="close" data-dismiss="modal" (click)="isSend=false;errisSend=false">&times;</button>
         </div>
         <div class="modal-body">
           <div *ngIf="!errisSend && !isSend" class="text-center mb-3">
@@ -136,19 +136,11 @@
             <h4 class="text blue-text heading text-center">Deletion is unsuccessful</h4>
             <div rounded class="text-center">
               <p>Try again</p>
-              <div>
-                <button class="btn btn-dark" data-dismiss="modal" >OK</button>
-              </div>
             </div>
           </div>
           <div *ngIf="isSend" >
             <div align = "center"><img src = '../../assets/select.png' width="100" height="80" alt=""/></div>
             <h4 class="text blue-text heading text-center">Deletion is successful</h4>
-            <div class="text-center">
-              <div>
-                <button class="btn btn-dark" data-dismiss="modal">OK</button>
-              </div>
-            </div>
           </div>
         </div>
       </div>
