--- a/waitlist/src/Component/admin/admin.component.html
+++ b/waitlist/src/Component/admin/admin.component.html
@@ -14,7 +14,8 @@
     </nav>
   </div>
   <br>
-  <div class="content" *ngIf="adminscreen">
+  <!--Table view-->
+  <!-- <div class="content" *ngIf="adminscreen">
     <div class="row ml-0 mr-0 d-flex justify-content-center" *ngIf="!isloaded">
       <div style="text-align: center;">
         <div class="spinner-border text-primary"></div>
@@ -78,6 +79,78 @@
       </div>
       <div class="row ml-0 mr-0" *ngIf="!isPresent && failure">
         <h4>{{errmsg}}</h4>
+      </div>
+    </div>
+  </div> -->
+  <!--Card view-->
+  <div class="content" *ngIf="adminscreen">
+    <div class="row ml-0 mr-0 d-flex justify-content-center" *ngIf="!isloaded">
+      <div style="text-align: center;">
+        <div class="spinner-border text-primary"></div>
+        <p class="text-center">Please wait while loading</p>
+      </div>
+    </div>
+    <div class="container-fluid" *ngIf="isloaded">
+      <div class="row ml-0 mr-0 d-flex justify-content-center">
+        <div>
+          <img src="../../assets/avarters/1.PNG" alt="" srcset="">
+          <h3 class="text-center">Admin</h3>
+        </div>
+      </div>
+      <h2>User Lists</h2>
+      <div class="row ml-0 mr-0" *ngIf="isPresent && !failure">
+        <div *ngFor="let cus of user; let i = index;" style="padding-left: 10px;" class="col-sm-3 col-md-6 col-lg-3 mb-4 d-flex align-items-stretch">
+          <div class="card flex-fill hover-card">
+            <div class="card-img-container" style="cursor:pointer">
+              <img class="card-img-top p-5" width="100" height="350" src="{{'../../../assets/avarters/'+cus.profilePictureURL+'.PNG'}}">
+            </div>
+            <div class="card-body shadow">
+              <h5 style="line-height:2"
+                  class="card-title font-weight-bold text-truncate" style="cursor: pointer;" title="{{cus.name}}">
+                  {{cus.name}}
+                  <span class="badge badge-pill float-right badge text-white">@ {{cus.position}}<sup>th</sup> Position</span>
+              </h5>
+              <h6 style="line-height:2"
+                  class="font-weight-light text-truncate" style="cursor: pointer;" title="{{cus.email}}">
+                  {{cus.email}}
+              </h6>
+
+              <div class="card-text mt-4" style="line-height: 2" data-toggle="tooltip" style="cursor: pointer;" data-placement="right" title="{{cus.userUrl}}">
+                {{cus.userUrl}}
+              </div><br />
+
+              <div class="card-text mt-4" style="line-height: 2" data-toggle="tooltip" style="cursor: pointer;" data-placement="right" title="{{cus.referalId}}">
+                Refered By {{cus.referalId}}
+              </div><br />
+
+              <div class="my-1 progress" style="line-height:2; height:1em !important">
+                <div class="progress-bar"
+                             [ngStyle]="{'width': bindcamp(cus.inital,cus.position,cus.userId)}">
+                </div>
+              </div>
+
+              <div style="font-size:0.8em" class="d-flex justify-content-between pb-4">
+                <div>
+                  <span>{{cus.inital - cus.position}} of {{cus.inital}}</span>
+                </div>
+                <div>
+                  <span class="float-right">{{per > 100 ? 0 : 100 - per | number : '.2-2'}}% remaining</span>
+                </div>
+              </div>
+              <div class="float-right">
+                <span class="material-icons mr-3" title="View" (click)="viewById(cus.userId)">
+                  visibility
+                </span>
+                <span class="material-icons mr-3" title="edit" data-toggle="modal" data-target="#edit" (click)="edit(cus)">
+                  edit
+                </span>  
+                <span class="material-icons mr-3" title="delete" data-toggle="modal" data-target="#delete" (click)="delete(cus)">
+                  delete
+                </span>
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
   </div>
